--- a/src/components/record-collection.astro
+++ b/src/components/record-collection.astro
@@ -11,7 +11,7 @@ import The1975 from "../assets/images/albums/1975.webp"
 ---
 
 <div class="collection-parent">
-    <h3>Still here? Come jam to my soundtrack</h3>
+    <h3>Still here? Why not share what's on rotation at home</h3>
     <div class="collection-container">
         <!-- Remember to adjust the animation equation when adding or removing albums -->
         <a href="https://www.youtube.com/watch?v=OR7R9Kuw2fY" target="_blank" rel="noreferrer noopener">
@@ -138,7 +138,6 @@ import The1975 from "../assets/images/albums/1975.webp"
                 transform: scale(0.95) rotate(2deg);
                 opacity: 100%;
                 box-shadow: 4px 3px 10px 0px #000000a3;
-                cursor: pointer;
                 transition: 0.4s;
                 filter: saturate(100%);
 
