--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -1,7 +1,7 @@
 button {
-    cursor: pointer;
     background: none;
     border: none;
+    cursor: pointer;
 }
 
 .btn-primary {
@@ -35,7 +35,8 @@ button {
     text-decoration: none;
     text-align: center;
     &:hover {
-        background-color: var(--color-grey-lightest);
+        background-color: var(--color-black);
+        color: var(--color-white);
         transition: all 0.2s;
     }
 }
