--- a/src/styles/components/case-study.scss
+++ b/src/styles/components/case-study.scss
@@ -2,22 +2,15 @@
     background-color: var(--color-primary);
     position: relative;
     transition: all 0.4s;
-    padding: 2rem 0;
+    padding-bottom: 2rem;
     border-radius: 1rem;
     box-shadow: var(--global-box-shadow);
-    &:hover {
-        .expand-icon {
-            opacity: 1;
-            transition: all 0.4s;
-        }
-    }
     .expand-icon {
         color: var(--color-white);
         display: flex;
         align-items: center;
         justify-content: center;
         position: absolute;
-        opacity: 0;
         top: 1rem;
         right: 0.75rem;
         z-index: 1000;
@@ -32,13 +25,14 @@
     .thumbnail-container {
         z-index: 1000;
         background: none;
-        cursor: url('../assets/icons/filled-circle.png'), auto;
         border: none;
         transition: all 0.4s;
         border-radius: 16px;
         padding: 0;
         filter: grayscale(0.6);
         video {
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
             width: 100%;
             height: auto;
             transition: all 0.4s;
@@ -50,6 +44,24 @@
             video {
                 transition: all 0.4s;
             }    
+        }
+    }
+    .tags {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1rem;
+        font-size: 0.75rem;
+        padding: 0 1rem;
+        .category-chip {
+            background-color: var(--color-primary-lighter);
+            padding: 0.25rem 0.75rem;
+            border-radius: 50px;
+        }
+        .tech-chip {
+            background-color: var(--color-secondary);
+            padding: 0.25rem 0.75rem;
+            border-radius: 50px;
         }
     }
     .title {
@@ -67,6 +79,7 @@
         &:hover {
             background-color: var(--color-grey-lightest);
             transition: all 0.2s;
+            transform: rotate(180deg);
         }
     }
 
@@ -96,7 +109,24 @@
             text-align: left;
             h2 {
                 text-align: center;
+                margin-top: 1.75rem;
             }
+            .tags {
+                justify-content: center;
+                font-size: 1rem;
+            }
+        }
+
+        .close-text {
+            text-align: right;
+            font-size: 0.75rem;
+            margin-top: 2rem;
+            margin-bottom: 0;
+        }
+        code {
+            background: var(--color-white);
+            border: solid 1px var(--color-black);
+            padding: 0.25rem;
         }
     }
 
@@ -121,6 +151,9 @@
                 p {
                     font-size: 1rem;
                 }
+            }
+            .close-text {
+                display: none;
             }
         }
     }
