--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,6 @@ import Navigation from '../components/Navigation.astro';
 						ctaCopy="View Site"
 						categoryTags={["Design", "Development"]}
 						ctaUrl="https://nolatransit.fly.dev/"
-						ctaCopyTwo='Read More'
 					/>
 					<CaseStudy 
 					client:idle
@@ -65,7 +64,7 @@ import Navigation from '../components/Navigation.astro';
 						title="Realtor Portal Dashboard Design"
 						thumbnailAssetSrc={DRBAgentPortalCaseStudyVideo}
 						categoryTags={["Design", "Development"]}
-						techStackTags={["Angular"]}	
+						techStackTags={["Angular", "Figma"]}	
 						copy="I designed and helped develop the front-end UI for a real estate agent dashboard integrated into a large national homebuilder's consumer-facing website. Because of the results of a lawsuit and legislation passed in 2024, real estate agents are no longer obligated to a standard and fixed commission after selling a home. This dashboard provides agents with the resources to organize leads and strategically pick homes for sale that will offer them the best commissions and incentives to make a sale."
 					/>
 					<CaseStudy 
@@ -95,8 +94,6 @@ import Navigation from '../components/Navigation.astro';
 						categoryTags={["Design"]}
 						techStackTags={["Sketch"]}	
 						copy="While at TORSH, I identified the need for a scalable design library to address inconsistencies caused by the growing design team. By conducting a comprehensive UI teardown and organizing our components,  I developed a design system based on Atomic Design principles, establishing consistent typography, color schemes, and reusable components. This design library helped save a ton of time designing in Sketch and gave our small team a consistent framework to build our designs."
-						ctaCopy="Read More"
-						ctaUrl="https://nolatransit.fly.dev/"
 					/>
 				</div>
 			</section>
@@ -257,7 +254,6 @@ import Navigation from '../components/Navigation.astro';
 
 	@include mobileOnly {
 		.hero {
-			flex-direction: column;
 			p {
 				font-size: 1.3rem;
 			}
@@ -346,7 +342,6 @@ import Navigation from '../components/Navigation.astro';
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
-		console.log(entry.target);
           entry.target.classList.add('visible');
           observer.unobserve(entry.target); // Optional: Unobserve after it animates once
         }
