blog home setup

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -37,7 +37,7 @@ const navItems = [
     .desktop-nav, .mobile-nav {
         background-color: var(--color-surface_base-transparent);
         box-sizing: border-box;
-        position: fixed;
+        position: sticky;
         top: 0;
         padding: 1rem;
         z-index: var(--z-index-navigation);
