--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
  @import "./components/case-study.scss";
  @import './buttons.scss';
  @import './typography.scss';
+ @import './blog-content.scss';
 
 :root {
 	--color-black: #231F20;
