--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,9 @@
 ---
 const navItems = [
     { name: 'andrewleach.design', href: '/', iconClass: 'lnr lnr-home' },
-    { name: 'Projects', href: '#projects', iconClass: 'lnr lnr-layers' },
-    { name: 'Services', href: '#services', iconClass: 'lnr lnr-screen' },
+    { name: 'Projects', href: '/#projects', iconClass: 'lnr lnr-layers' },
+    { name: 'Services', href: '/#services', iconClass: 'lnr lnr-screen' },
+    { name: 'Blog', href: '/blog/', iconClass: 'lnr lnr-book' },
 ];
 
 ---
