--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,7 +19,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <!-- <link rel="icon" type="image/png" href="../assets/images/favicon.png" /> -->
  <!-- favicon -->
-<link rel="icon" type="image/png" href="src/assets/images/favicon.png" />
+<link rel="icon" type="image/png" href="/favicon.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Icons -->
