--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,8 +45,10 @@ import Navigation from '../components/Navigation.astro';
 						thumbnailAssetSrc={NolaTransitCaseStudyVideo}
 						copy="The NOLA Transit app, a volunteer initiative by Code for America New Orleans, provides real-time tracking of buses and streetcars for New Orleanians. This essential feature, previously part of the official city-owned public transit app, was omitted in the launch of their redesigned app Le Pass, prompting community volunteers to create this open-source web app. My role involved refactoring the front-end and redesigning the UI to prioritize mobile users."
 						ctaCopy="View Site"
+						ctaCopyTwo='Read More'
 						categoryTags={["Design", "Development"]}
 						ctaUrl="https://nolatransit.fly.dev/"
+						ctaTwoUrl='/blog/nola-transit-overhaul/'
 					/>
 					<CaseStudy 
 					client:idle
