--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,8 +23,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Icons -->
-<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-
+<link rel="preload" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" as="style" onload="this.rel='stylesheet'">
 <!-- Font preloads -->
 <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
