--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -56,18 +56,24 @@ main {
 }
 
 dialog {
-	max-width: 50vw;
+	max-width: 60vw;
 	background-color: var(--color-white);
 	overflow-x: hidden;
 	scrollbar-width: thin;
 	&::backdrop {
-		background-color: rgba(0, 4, 23, 0.8);
+		background-color: rgba(0, 4, 23, 0.85);
 	}
 }
 
 @include xlarge {
 	dialog {
 		max-width: 40vw;
+	}
+}
+
+@include tabletOnly {
+	dialog {
+		max-width: 75vw;
 	}
 }
 
