--- a/src/styles/components/case-study.scss
+++ b/src/styles/components/case-study.scss
@@ -15,7 +15,7 @@
         right: 0.75rem;
         z-index: 1000;
         width: 2rem;
-        height: auto;
+        height: 1.75rem;
         font-size: 1.5rem;
         font-weight: 800;
         background-color: var(--color-primary);
